# vybersecurity

./: .gitignore  .vybersecurity.yml  ATTRIBUTION.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  NOTICE  README.md  REFERENCES.md  SPEC.md  pyproject.toml
.github/workflows/: security.yml
src/vybersecurity/: __init__.py  cli.py  config.py  dast.py  models.py  reporter.py  scanner.py  stride.py  triage.py
src/vybersecurity/patterns/: __init__.py  antigravity.py  auth.py  common.py  config.py  secrets.py
tests/: test_canary.py  test_cli.py  test_dast.py  test_patterns.py  test_phase3.py  test_stride.py  test_triage.py
tests/fixtures/: admin_middleware_bypass.ts  cors_wildcard.js  expo_public_secret.env  google_tokens_insert.py  granted_auth.js  hardcoded_gemini_key.py  malformed.env  xss_vulnerable.html
